--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,6 @@ jobs:
       - name: Greet a new contributor
         uses: logesh-kumar/fancy-echo@v1
         with:
-          who-to-greet: 'John Doe'
+          who-to-greet: 'Jane Doe'
             
   
